@@ -6,6 +6,7 @@ Version 0.20.0
   Minor ProgramNode changes
   Added develop mode Send long message Request
   Added dialog for sendLMrequest
+  Added CAN BUS monitor as separate window
 
 Version 0.19.0
   Added delete offline nodes to NodesViewAdvanced menu
